syntax = "proto3";
package wechaty.puppet.event;

enum EventType {
  EVENT_TYPE_UNKNOWN = 0;

  WATCHDOG           = 1;
  MESSAGE            = 2;

  reserved 3 to 15;

  ERROR       = 16;
  FRIENDSHIP  = 17;
  ROOM_INVITE = 18;
  ROOM_JOIN   = 19;
  ROOM_LEAVE  = 20;
  ROOM_TOPIC  = 21;
  SCAN        = 22;
  DONG        = 23;
  READY       = 24;
  RESET       = 25;
  LOGIN       = 26;
  LOGOUT      = 27;
}

message EventRequest {}

message EventResponse {
  EventType type = 1;
  string payload = 2; // JSON.stringify({ ... })
}
